2007-08-03  Rodney Dawes  <dobey.pwns@gmail.com>

	* ghex.desktop.in: Add semicolon to end of Categories list
	Patch from Luca Cavalli <luca.cavalli@gmail.com>

	Fixes #339414

2007-08-03  Rodney Dawes  <dobey.pwns@gmail.com>

	* src/findreplace.c (replace_all_cb):
	Use ngettext to translate plurals

	Fixes #123865

2007-08-03  Rodney Dawes  <dobey.pwns@gmail.com>

	* Makefile.am: Remove duplicate @INTLTOOL_DESKTOP_RULE@

	Fixes #333808

2007-08-03  Rodney Dawes  <dobey.pwns@gmail.com>

	* Makefile.am: Support --disable-schemas-install
	Patch from dmacks@netspace.org

	Fixes #333807

2007-07-27  Raivis Dejus  <orvils@gmail.com>

	* configure.in: Added 'lv' to ALL_LINGUAS.

2007-01-10  Pema Geyleg  <pema.geyleg@gmail.com>

	* configure.in: Added 'dz' to ALL_LINGUAS.

2006-05-23  Jaka Mocnik  <jaka@gnu.org>

	* configure.in: version 2.8.3.
	* src/ghex-window.c (ghex_window_drag_data_received): do not
	dereference the filename pointer!
	* src/gtkhex.c (gtk_hex_set_cursor[_xy]): add a sanity check so that
	new cursor pos is always non-negative.
	* src/hex-document.c (get_document_attributes): do not discriminate
	against empty files.
	
2006-04-17  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Remove obsolete entry for no_NO.
	* po/no.po: And the translation.

2006-03-07  Jaka Mocnik  <jaka@gnu.org>

	* configure.in: version 2.8.2; release a tarball to pick up new
	translations; tagged as GHEX_2_8_2.
	
2005-12-06  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Add nb to ALL_LINGUAS.

2005-08-24  Pawan Chitrakar  <pchitrakar@gmail.com>

	* configure.in: Added ne in ALL_LINGUAS

2005-04-01  Steve Murphy  <murf@e-tools.com>

        * configure.in: Added "rw" to ALL_LINGUAS.

2004-11-06  Amanpreet Singh Alam <aalam@redhat.com>

	* ALL_LINGUAS: pa [Punjabi] is add for Transaltion

2004-10-17  Jaka Mocnik  <jaka@gnu.org>

	* src/Makefile.am (INCLUDES): removed -I$(includedir): apparently it breaks 
	builds for some people.