@@ -149,8 +149,8 @@
 	<separator/>
 
 	<menuitem name="EditCopy" verb="" _label="_Copy"/>
-	<menuitem name="EditCut" verb="" _label="C_ut"/>
-        <menuitem name="EditPaste" verb="" _label="_Paste"/>
+	<menuitem name="EditCut" verb="" _label="Cu_t"/>
+        <menuitem name="EditPaste" verb="" _label="Pa_ste"/>
 
 	<separator/>
 
@@ -158,7 +158,7 @@
 
 	<menuitem name="AdvancedFind" verb="" _label="_Advanced Find"/>
 
-	<menuitem name="Replace" verb="" _label="_Replace"/>
+	<menuitem name="Replace" verb="" _label="R_eplace"/>
 
 	<separator/>
 
@@ -204,7 +204,7 @@
 	<separator/>
 
 	<menuitem name="CharacterTable" type="toggle" verb=""
-		  _label="Character _Table..."/>
+		  _label="Character _Table"/>
 
 	<menuitem name="Converter" type="toggle" verb=""
 		  _label="_Base Converter"/>
