@@ -1,5 +1,13 @@
 2007-08-03  Rodney Dawes  <dobey.pwns@gmail.com>
 
+	* src/ghex-ui.xml: Fix mnemonic conflicts in Edit menu
+	Remove ellipsis from "Character _Table" toggle menu item
+	Patch from Subrahmanyam Madduri
+	
+	Fixes #339054
+
+2007-08-03  Rodney Dawes  <dobey.pwns@gmail.com>
+
 	* ghex.desktop.in: Add semicolon to end of Categories list
 	Patch from Luca Cavalli <luca.cavalli@gmail.com>
 
